# mediora-back

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
src/: doctor_authentication.py  main.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: appointments.py  authentication.py  chat.py  doctor_authentication.py  doctor_schedule.py  feedback.py  users.py
src/assets/: redirect-to-app.html
src/config/: cloud.py  env.py  google_client.py  http.py  redis_client.py
src/db/: __init__.py  connection.py
src/integrations/: mailing.py
src/models/: Appointments.py  doctor_authentication.py  doctor_schedule.py  feedback.py  messaging.py  users.py
src/schemas/: __init__.py  appointment.py  chat.py  doctor_requests.py  doctor_schedule.py  feedback.py  users.py
src/services/: appointment.py  authentication.py  doctor_authentication.py  doctor_schedule.py  feedback.py  messaging.py  users.py
src/utils/: authentication.py  chat_manager.py  cloud.py  helpers.py  messaging.py  time.py  validators.py
