[tool.poetry]
name = "mediora"
version = "0.1.0"
description = ""
authors = ["Bendraou Aek Nadhir", "Bentabet Elhabib"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
asyncpg = "0.31.0"
sqlalchemy = "2.0.46"
pydantic = "2.12.5"
python-dotenv = "1.2.1"
python-jose = "3.5.0"
python-multipart = "0.0.22"
fastapi-mail = ">=1.6.1,<2.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
authlib = ">=1.6.6,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
itsdangerous = ">=2.2.0,<3.0.0"
slowapi = ">=0.1.9,<0.2.0"
cloudinary = ">=1.44.1,<2.0.0"
argon2-cffi = "^25.1.0"
argon2 = "^0.1.10"
websockets = "^16.0"
resend = "^2.26.0"
alembic = "^1.18.4"
psycopg = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
